welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: ';' expected but ')' found.
    if (estFaceMur)())
                     ^